--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "<!-- TABLE OF CONTENTS -->",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "npm run lint -- --fix"
   },
   "repository": {
     "type": "git",
